--- a/testBottomSheet/pubspec.yaml
+++ b/testBottomSheet/pubspec.yaml
@@ -30,10 +30,16 @@ dependencies:
   http: ^0.13.3
   provider: ^6.0.1
   carousel_slider: ^4.0.0
+  firebase_auth: ^3.3.0
+  google_sign_in: ^5.0.3
+
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  provider: ^6.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
