--- a/testBottomSheet/pubspec.yaml
+++ b/testBottomSheet/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_sign_in: ^5.0.3
 
   font_awesome_flutter: ^9.2.0
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
