--- a/testBottomSheet/pubspec.yaml
+++ b/testBottomSheet/pubspec.yaml
@@ -35,13 +35,13 @@ dependencies:
 
   font_awesome_flutter: ^9.2.0
   connectivity: ^3.0.6
+  flutter_facebook_auth: ^3.5.6+3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   provider: ^6.0.1
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
