--- a/testBottomSheet/pubspec.yaml
+++ b/testBottomSheet/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
 
   font_awesome_flutter: ^9.2.0
   connectivity: ^3.0.6
-  flutter_facebook_auth: ^3.5.6+3
+  flutter_facebook_login: ^3.0.0
 
 dev_dependencies:
   flutter_test:
