--- a/testBottomSheet/pubspec.yaml
+++ b/testBottomSheet/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   connectivity: ^3.0.6
   flutter_facebook_login: ^3.0.0
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
