--- a/testBottomSheet/pubspec.yaml
+++ b/testBottomSheet/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   connectivity: ^3.0.6
   flutter_facebook_login: ^3.0.0
   google_fonts: ^2.1.0
+  twitter_login: ^4.0.1
 
 dev_dependencies:
   flutter_test:
