--- a/testBottomSheet/android/app/src/main/AndroidManifest.xml
+++ b/testBottomSheet/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.test">
     
   <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
         android:label="test"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        tools:replace="android:label"
+        >
+        
+        <meta-data android:name="com.google.android.gms.wallet.api.enabled" android:value="true"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -58,6 +64,16 @@
             <data android:scheme="@string/fb_login_protocol_scheme" />
         </intent-filter>
     </activity>
+
+        <activity android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
+                android:launchMode="singleTask">
+                <intent-filter>
+                    <action android:name="android.intent.action.VIEW" />
+                    <category android:name="android.intent.category.DEFAULT" />
+                    <category android:name="android.intent.category.BROWSABLE" />
+                    <data android:scheme="${applicationId}.braintree" />
+                </intent-filter>
+        </activity>
 
     </application>
 </manifest>
