--- a/testBottomSheet/pubspec.yaml
+++ b/testBottomSheet/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   google_fonts: ^2.1.0
   twitter_login: ^4.0.1
+  flutter_braintree: ^2.2.0
 
 dev_dependencies:
   flutter_test:
