--- a/testBottomSheet/android/app/build.gradle
+++ b/testBottomSheet/android/app/build.gradle
@@ -48,6 +48,14 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 flutter {
@@ -56,6 +64,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation('com.paypal.checkout:android-sdk:0.2.0')
     // implementation 'com.facebook.android:facebook-android-sdk:latest.release'
 
 }
