--- a/testBottomSheet/pubspec.yaml
+++ b/testBottomSheet/pubspec.yaml
@@ -39,12 +39,12 @@ dependencies:
   google_fonts: ^2.1.0
   twitter_login: ^4.0.1
   flutter_braintree: ^2.2.0
+  flutter_sslcommerz: ^2.1.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  provider: ^6.0.1
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
