--- a/testBottomSheet/android/app/build.gradle
+++ b/testBottomSheet/android/app/build.gradle
@@ -72,12 +72,12 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation('com.paypal.checkout:android-sdk:0.2.0')
-    implementation 'com.android.support:support-compat:28.0.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation (name: 'sslCommerzSdk', ext:'aar')
+    // implementation 'com.android.support:support-compat:28.0.0'
+    // implementation 'com.android.support:appcompat-v7:28.0.0'
+    // implementation 'com.android.support:support-v4:28.0.0'
+    // implementation 'com.android.support:design:28.0.0'
+    // implementation 'com.google.code.gson:gson:2.8.5'
+    // implementation (name: 'sslCommerzSdk', ext:'aar')
 
 }
  
