--- a/testBottomSheet/pubspec.yaml
+++ b/testBottomSheet/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   google_fonts: ^2.1.0
   twitter_login: ^4.0.1
   flutter_braintree: ^2.2.0
-  flutter_sslcommerz: ^2.1.0-nullsafety.0
+  flutter_sslcommerz: ^2.0.0-nullsafety.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
